manifests/app/sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceci-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      name: iceci-sync
  template:
    metadata:
      labels:
        name: iceci-sync
    spec:
      serviceAccountName: iceci-operator
      containers:
      - name: iceci-sync
        image: docker.io/iceci/iceci-sync:alpha3
        imagePullPolicy: Always
