manifests/app/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceci-api
  labels:
    name: iceci-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: iceci-api
  template:
    metadata:
      labels:
        name: iceci-api
    spec:
      serviceAccountName: iceci-operator
      containers:
      - name: iceci-api
        image: docker.io/iceci/iceci-api:alpha2
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: iceci-api
spec:
  selector:
    name: iceci-api
  type: ClusterIP
  ports:
  - protocol: TCP
    name: api
    port: 80
    targetPort: 8000
