manifests/app/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceci-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      name: iceci-postgres
  template:
    metadata:
      labels:
        name: iceci-postgres
    spec:
      containers:
      - name: iceci-postgres
        image: postgres:11
        ports:
        - containerPort: 5432
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: pgdata
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: iceci-postgres

---
apiVersion: v1
kind: Service
metadata:
  name: iceci-postgres
spec:
  selector:
    name: iceci-postgres
  ports:
  - protocol: TCP
    name: postgres
    port: 5432
    targetPort: 5432
