manifests/app/ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceci-ui
  labels:
    name: iceci-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      name: iceci-ui
  template:
    metadata:
      labels:
        name: iceci-ui
    spec:
      containers:
      - name: iceci-ui
        image: docker.io/iceci/iceci-ui:alpha3
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: iceci-ui
spec:
  selector:
    name: iceci-ui
  type: ClusterIP
  ports:
  - protocol: TCP
    name: ui
    port: 80
    targetPort: 80
